--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -1,17 +1,17 @@
-  <ion-header>
-    <ion-navbar align-title="center">
-      <!-- Toggle left side menu -->
-      <button ion-button icon-only menuToggle>
-        <ion-icon name="menu"></ion-icon>
-      </button>
-      <ion-title>Tiles</ion-title>
-    </ion-navbar>
-    <ion-toolbar>
-      <ion-title left style="padding-left: 0;">{{serverConnectStatusMsg}}
-        <button right class="titleBttn" ion-button small color="positive" (click)="connectToServer()">CONNECT</button>
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header>
+  <ion-navbar align-title="center">
+    <!-- Toggle left side menu -->
+    <button ion-button icon-only menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Tiles</ion-title>
+  </ion-navbar>
+  <ion-toolbar>
+    <ion-title left style="padding-left: 0;">{{serverConnectStatusMsg}}
+      <button right class="titleBttn" ion-button small color="positive" (click)="connectToServer()">CONNECT</button>
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <ion-refresher (ionRefresh)="refreshDevices($event)">
@@ -26,11 +26,11 @@
   <ion-list class="mainList">
     <ion-item class="devices" color="light" *ngFor="let device of devices">
       <div class="row row-center">
-        <div class="col col-75">
-          <b>{{device.name}}</b><br>ID: {{device.tileId}}
+        <div id="devName" class="col col-75">
+          <b>{{device.name}}</b><br><!--ID: {{device.tileId}}-->
         </div>
         <div class="col">
-          <button class="bttn" ion-button small color="positive" (click)="bleService.connect(device)" [hidden]="device.connected">CONNECT</button>
+          <button class="bttn" ion-button small color="positive" (click)="bleService.connect(device)" [disabled]="device.loading" [hidden]="device.connected">CONNECT</button>
           <button class="bttn" ion-button small color="positive" id="disconnectButton" (click)="bleService.disconnect(device)" [hidden]="!device.connected">DISCONNECT</button>
           <!--button class="bttn" ion-button small color="positive" id="fetchEventMappingsButton" (click)="fetchEventMappings(device)" [hidden]="!device.connected">FETCH EVT</button-->
         </div>
@@ -47,7 +47,7 @@
           </div>
           <div class="col">
             <button class="bttn" ion-button small color="positive" (click)="changeNamePop(device)">CHANGE NAME</button>
-            <button class="bttn" ion-button small color="positive" (click)="devicesService.resetName(device)">Reset name</button>
+            <button class="bttn" ion-button small color="positive" (click)="devicesService.resetName(device)">RESET NAME</button>
           </div>
         </div>
       </ion-list>
