--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -49,6 +49,9 @@
             <button class="bttn" ion-button small color="positive" (click)="changeNamePop(device)">CHANGE NAME</button>
             <button class="bttn" ion-button small color="positive" (click)="devicesService.resetName(device)">RESET NAME</button>
           </div>
+          <div class="col">
+            <button class="bttn" ion-button small color="positive" (click)="identifyDevice(device)">FIND DEVICE</button>
+          </div>
         </div>
       </ion-list>
     </ion-item>
