--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -52,6 +52,16 @@
         </div>
       </ion-list>
     </ion-item>
+    <ion-item class="devices" color="light" *ngFor="let tile of virtualTiles">
+      <div class="row row-center">
+        <div id="devName" class="col col-75">
+          <b>{{tile.virtualName}}</b><br><!--ID: {{device.tileId}}-->
+        </div>
+        <div class="col">
+          <button class="bttn" ion-button small color="positive" (click)="tilesApi.pairDeviceToVirualTile('Tile_da', tile._id, 'test3')" >PAIR</button>
+        </div>
+      </div>
+    </ion-item>
   </ion-list>
 </ion-content>
 
