add titles to the lists of physical and virtual devices to se which is which

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -23,6 +23,7 @@
     </ion-refresher-content>
   </ion-refresher>
   <ion-item no-lines>{{statusMsg}}</ion-item>
+  <ion-title left style="padding-left: 0;">PHYSICAL TILES</ion-title>
   <ion-list class="mainList">
     <ion-item class="devices" color="light" *ngFor="let device of devices">
       <div class="row row-center">
@@ -52,6 +53,7 @@
         </div>
       </ion-list>
     </ion-item>
+    <ion-title left style="padding-left: 0;">VIRTUAL TILES</ion-title>
     <ion-item class="devices" color="light" *ngFor="let tile of virtualTiles">
       <div class="row row-center">
         <div id="devName" class="col col-75">
