Some code cleanup

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -57,10 +57,11 @@
     <ion-item class="devices" color="light" *ngFor="let tile of virtualTiles">
       <div class="row row-center">
         <div id="devName" class="col col-75">
-          <b>{{tile.virtualName}}</b><br><!--ID: {{device.tileId}}-->
-        </div>
+          <b>{{tile.virtualName}}</b><br>
         <div class="col">
-          <button class="bttn" ion-button small color="positive" (click)="tilesApi.pairDeviceToVirualTile('Tile_da', tile._id, 'test3')" >PAIR</button>
+        <!--TODO: Change first parameter to a physical tile we want to pair to the virtual one-->
+          <button class="bttn" ion-button small color="positive" (
+          click)="tilesApi.pairDeviceToVirualTile('Tile_da', tile._id, 'test3')" >PAIR</button>
         </div>
       </div>
     </ion-item>
