Add a popup when pair button is clicked that lets the user select among the physical devices.

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -61,7 +61,7 @@
         </div>
         <div class="col">
           <!--TODO: Change first parameter to a physical tile we want to pair to the virtual one-->
-          <button class="bttn" ion-button small color="positive" (click)="tilesApi.pairDeviceToVirualTile('Tile_da', tile._id, 'test3')" >PAIR</button>
+          <button class="bttn" ion-button small color="positive" (click)="pairTilePopUp(tile)" >PAIR</button>
         </div>
       </div>
     </ion-item>
