change some method and attribute names and set fields to private

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -48,7 +48,7 @@
           </div>
           <div class="col">
             <button class="bttn" ion-button small color="positive" (click)="changeNamePop(device)">CHANGE NAME</button>
-            <button class="bttn" ion-button small color="positive" (click)="devicesService.resetName(device)">RESET NAME</button>
+            <button class="bttn" ion-button small color="positive" (click)="devicesService.resetDeviceName(device)">RESET NAME</button>
           </div>
           <div class="col">
             <button class="bttn" ion-button small color="positive" (click)="identifyDevice(device)">FIND DEVICE</button>
