Removed remaining HEAD-tag from mergeconflict

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -8,7 +8,7 @@
   </ion-navbar>
   <ion-toolbar>
     <ion-title left style="padding-left: 0;">{{serverConnectStatusMsg}}
-      <button right class="titleBttn" ion-button small color="positive" (click)="connectToServer()">CONNECT</button>
+      <button right class="titleBttn" ion-button small color="positive" (click)="showConnectMQTTPopup()">CONNECT</button>
     </ion-title>
   </ion-toolbar>
 </ion-header>
