ad functionallity to get applications in the GUI

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -67,6 +67,16 @@
         </div>
       </div>
     </ion-item>
+    <ion-title left style="padding-left: 0;">Applications</ion-title>
+    <button right class="bttn" ion-button small color="positive" (click)="setApplications()">gettem</button>
+    <ion-item class="devices" color="light" *ngFor="let app of applications">
+      <div class="row row-center">
+        <div id="devName" class="col col-75">
+          <b>{{app._id}}</b><br>
+          <button right class="bttn" ion-button small color="positive" (click)="setActiveApp()">choose</button>
+        </div>
+      </div>
+    </ion-item>
   </ion-list>
 </ion-content>
 
