--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -14,5 +14,9 @@
 
 
 <ion-content padding>
+  <ion-list>
+    <ion-item  *ngFor="let device of devices">
 
+    </ion-item>>
+  </ion-list>
 </ion-content>
