--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -7,7 +7,23 @@
 
 </ion-header>
 
-
 <ion-content padding>
-YOYOYOY
+  <form class="list">
+    <ion-list id="login-list1">
+      <label class="item item-input">
+        <span class="input-label">Username</span>
+        <input type="text" placeholder="">
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Host</span>
+        <input type="text" placeholder="">
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Port</span>
+        <input type="number" placeholder="">
+      </label>
+    </ion-list>
+    <div class="spacer" style="height: 40px;"></div>
+    <a class="button button-stable  button-block">Log in</a>
+  </form>
 </ion-content>
