--- a/GATEWAY/src/pages/tabs/tabs.html
+++ b/GATEWAY/src/pages/tabs/tabs.html
@@ -1,3 +1,6 @@
-<ion-tabs>
-  <ion-tab [root]="rootPage" tabTitle="Home" tabIcon="home"></ion-tab>
+<ion-tabs class="tabs-stable tabs-icon-top" id="tabsController-tabs1">
+  <ion-tab [root]="rootPage" tabTitle="Applications" tabIcon="folder"></ion-tab>
+  <ion-tab tabTitle="Physical Tiles" tabIcon="bookmark"></ion-tab>
+  <ion-tab tabTitle="Developer Term" tabIcon="desktop">
+  </ion-tab>
 </ion-tabs>
