Make the selection of an application work

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -73,7 +73,7 @@
       <div class="row row-center">
         <div id="devName" class="col col-75">
           <b>{{app._id}}</b><br>
-          <button right class="bttn" ion-button small color="positive" (click)="setActiveApp()">choose</button>
+          <button right class="bttn" ion-button small color="positive" (click)="setActiveApp(app)">choose</button>
         </div>
       </div>
     </ion-item>
