--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -14,9 +14,9 @@
 
 
 <ion-content padding>
+  <h3>Hello from Applications</h3>
   <ion-list>
     <ion-item  *ngFor="let device of devices">
-
-    </ion-item>>
+    </ion-item>
   </ion-list>
 </ion-content>
