--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the Applications page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>applications</ion-title>
+    <ion-title>Applications</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -22,7 +16,6 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-title left>Applications</ion-title>
   <ion-list>
     <button (click)="setApplications()">gettem</button>
     <ion-item *ngFor="let app of applications" (click)="setActiveApp(app)">
