--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -7,12 +7,11 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>devTerm</ion-title>
+    <ion-title>Developer Terminal</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-<h1>Header Dev</h1>
 </ion-content>
