--- a/GATEWAY/src/pages/physical-tiles/physical-tiles.html
+++ b/GATEWAY/src/pages/physical-tiles/physical-tiles.html
@@ -7,12 +7,11 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>physicalTiles</ion-title>
+    <ion-title>Physical Tiles</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-<h1>Header Physical</h1>
 </ion-content>
