add functions from home.ts to physical-tiles.ts

--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -1,4 +1,3 @@
-
 <ion-header>
 
   <ion-navbar>
@@ -24,6 +23,6 @@
       </label>
     </ion-list>
     <div class="spacer" style="height: 40px;"></div>
-    <a class="button button-stable  button-block">Log in</a>
+    <a class="button button-stable  button-block" (click)="showConnectMQTTPopup()">Log in</a>
   </form>
 </ion-content>
