Changed title to be name of id of application chosen.

--- a/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
+++ b/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Virtual Tiles</ion-title>
+    <ion-title>{{applicationTitle}}</ion-title>
   </ion-navbar>
 
 </ion-header>
