fix virtual tiles page

--- a/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
+++ b/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
@@ -14,5 +14,15 @@
 
 
 <ion-content padding>
-
+	<ion-title left style="padding-left: 0;">VIRTUAL TILES</ion-title>
+  <ion-item class="devices" color="light" *ngFor="let tile of virtualTiles">
+    <div class="row row-center">
+      <div id="devName" class="col col-75">
+        <b>{{tile.virtualName}}</b><br>
+      </div>
+      <div class="col">
+        <button class="bttn" ion-button small color="positive" (click)="pairTilePopUp(tile)" >PAIR</button>
+      </div>
+    </div>
+  </ion-item>
 </ion-content>
