--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -2,12 +2,13 @@
 
   <ion-navbar>
     <ion-title>Applications</ion-title>
+     <button right class="titleBttn" ion-button small color="positive" (click)="escape()">logout</button>
   </ion-navbar>
 
 </ion-header>
 
 <ion-content padding>
-  <ion-refresher (ionRefresh)="refreshDevices($event)">
+  <ion-refresher (ionRefresh)="refreshApplications($event)">
     <ion-refresher-content
       pullingIcon="arrow-dropdown"
       pullingText="Pull to refresh"
@@ -17,8 +18,7 @@
   </ion-refresher>
 
   <ion-list>
-    <ion-title left style="padding-left: 0;">Applications</ion-title>
-    <button right class="titleBttn" ion-button small color="positive" (click)="showConnectMQTTPopup()">CONNECT</button>
+    <button right class="titleBttn" ion-button small color="positive" (click)="setApplications()">FETCH</button>
     <ion-item class="devices" color="light" *ngFor="let app of applications">
       <div class="row row-center">
         <div id="devName" class="col col-75">
