Fix login bypass and add pull down to refresh list text in applications and physical tiles

--- a/GATEWAY/src/pages/physical-tiles/physical-tiles.html
+++ b/GATEWAY/src/pages/physical-tiles/physical-tiles.html
@@ -40,4 +40,5 @@
       </ion-list>
     </ion-item>
   </ion-list>
+  <ion-item style="text-align: center;">Pull down to refresh list</ion-item>
 </ion-content>
