--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -18,7 +18,6 @@
   </ion-refresher>
 
   <ion-list>
-    <button right class="titleBttn" ion-button small color="positive" (click)="setApplications()">FETCH</button>
     <ion-item class="devices" color="light" *ngFor="let app of applications">
       <div class="row row-center">
         <div id="devName" class="col col-75">
@@ -28,4 +27,5 @@
       </div>
     </ion-item>
   </ion-list>
+  <ion-item style="text-align: center;">Pull down to refresh list</ion-item>
 </ion-content>
