--- a/GATEWAY/src/pages/physical-tiles/physical-tiles.html
+++ b/GATEWAY/src/pages/physical-tiles/physical-tiles.html
@@ -40,5 +40,5 @@
       </ion-list>
     </ion-item>
   </ion-list>
-  <ion-item style="text-align: center;">Pull down to refresh list</ion-item>
+  <ion-item *ngIf="refreshed" style="text-align: center;">Pull down to refresh list</ion-item>
 </ion-content>
