The checkbox for remmeber me is now sent through the form and does not call a seperate function for toggeling the remmeber me.

--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -22,7 +22,7 @@
     </ion-item>
     <ion-item>
       <ion-label>Remember me</ion-label>
-      <ion-checkbox (click)="rememberMe()" checked='false'></ion-checkbox>
+      <ion-checkbox [(ngModel)]="loginInfo.remember" name='remember'></ion-checkbox>
     </ion-item>
     <button ion-button type="submit" block>Log In!</button>
   </form>
