Cards behind nearby tiles. Applications are now loaded automatically after login

--- a/GATEWAY/src/pages/physical-tiles/physical-tiles.html
+++ b/GATEWAY/src/pages/physical-tiles/physical-tiles.html
@@ -17,7 +17,7 @@
   </ion-refresher>
 
   <ion-list>
-    <ion-item *ngFor="let device of devices">
+    <ion-item color="light" class="devices" *ngFor="let device of devices">
       <div class="row row-center">
         <div id="devName" class="col col-75">
           <b>{{device.name}}</b><br>
