Added some descriptive printing to the already paired tile device.

--- a/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
+++ b/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
@@ -39,8 +39,8 @@
   <ion-item class="devices" color="light" *ngFor="let tile of pairedVirtualTiles">
     <div class="row row-center">
       <div id="devName" class="col col-75">
-        <b>vTile: {{tile.virtualName}}</b><br>
-        <p>Tile: {{tile.tile._id}}</p><br>
+        <b>Virtual tile: {{tile.virtualName}}</b><br>
+        <b>Tile: {{tile.tile._id}}</b>
       </div>
       <div class="col">
         <!-- TODO: add unpair function -->
