More visual changes to the already paired tile.

--- a/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
+++ b/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
@@ -40,7 +40,7 @@
     <div class="row row-center">
       <div id="devName" class="col col-75">
         <b>Virtual tile: {{tile.virtualName}}</b><br>
-        <b>Tile: {{tile.tile._id}}</b>
+        <b>Physical tile: {{tile.tile._id}}</b>
       </div>
       <div class="col">
         <!-- TODO: add unpair function -->
