More sleek application list, now with less spacing.

--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -21,7 +21,7 @@
     <ion-item class="devices" color="light" *ngFor="let app of applications">
       <div class="row row-center">
         <div id="devName" class="col col-75">
-          <b>{{app._id}}</b><br>
+          <b>{{app._id}}</b>
           <button right class="bttn" ion-button small color="positive" (click)="viewApplication(app)">View app</button>
         </div>
       </div>
