Renamed tab item to Dev Terminal.

--- a/GATEWAY/src/pages/tabs/tabs.html
+++ b/GATEWAY/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs class="tabs-stable tabs-icon-top" id="tabsController-tabs1">
   <ion-tab [root]="rootPage" tabTitle="Applications" tabIcon="folder"></ion-tab>
   <ion-tab [root]="physicalPage" tabTitle="Physical Tiles" tabIcon="bookmark"></ion-tab>
-  <ion-tab [root]="devPage" tabTitle="Developer Term" tabIcon="desktop">
+  <ion-tab [root]="devPage" tabTitle="Dev Terminal" tabIcon="desktop">
   </ion-tab>
 </ion-tabs>
