--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -26,4 +26,5 @@
     </ion-item>
     <button ion-button type="submit" block>Log In!</button>
   </form>
+  <button ion-button (click)="autoLogin()" block>Auto login!</button>
 </ion-content>
