--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -14,7 +14,7 @@
 
 </ion-header>
 
-<ion-content padding style="overflow-scroll: true">
+<ion-content padding>
   <ion-list>
     <ion-item class="devices" *ngFor="let message of messages">
       <div class="row row-center">
