Added all scss rules from home.scss to app.scss, and added button for automatic login.

--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -26,4 +26,6 @@
     </ion-item>
     <button ion-button type="submit" block>Log In!</button>
   </form>
+  
+  <button ion-button type="submit" (click)="autoLogin()" block>Auto login</button>
 </ion-content>
