remove refreshed property and check for undefined instead in the views

--- a/GATEWAY/src/pages/physical-tiles/physical-tiles.html
+++ b/GATEWAY/src/pages/physical-tiles/physical-tiles.html
@@ -26,5 +26,5 @@
       </div>
     </ion-item>
   </ion-list>
-  <ion-item *ngIf="refreshed" style="text-align: center;">Pull down to refresh list</ion-item>
+  <ion-item *ngIf="devices === undefined" style="text-align: center;">Pull down to refresh list</ion-item>
 </ion-content>
