--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -27,5 +27,5 @@
       </div>
     </ion-item>
   </ion-list>
-  <ion-item *ngIf="refreshed" style="text-align: center;">Pull down to refresh list</ion-item>
+  <ion-item *ngIf="applications === undefined" style="text-align: center;">Pull down to refresh list</ion-item>
 </ion-content>
