--- a/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
+++ b/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
@@ -28,10 +28,15 @@
     <ion-item class="devices" color="light"  *ngIf="tile.tile == null">
       <div class="row row-center">
         <div id="devName" class="col col-75">
-          <b>{{tile.virtualName}}</b><br>
+          <div style="float: left; top: 0;">
+            <b>Virtual tiles</b><br>
+            <span style="size: 14;">{{tile.virtualName}}</span>
+          </div>
+          <div style="float: right; top: 0;">
+            <button class="bttn" ion-button small color="positive" (click)="pairTilePopUp(tile)">PAIR</button>
+          </div>
         </div>
         <div class="col">
-          <button class="bttn" ion-button small color="positive" (click)="pairTilePopUp(tile)">PAIR</button>
         </div>
       </div>
     </ion-item>
@@ -42,11 +47,15 @@
     <ion-item  class="devices" color="light" *ngIf="tile.tile != null">
       <div class="row row-center">
         <div id="devName" class="col col-75">
-          <b>Virtual tile: {{tile.virtualName}}</b><br>
-          <b>Physical tile: {{tile.tile._id}}</b>
+          <div style="float: left; top: 0;">
+          <b>Virtual tiles</b><br>
+          <span style="size: 14;">{{tile.virtualName}}</span>
         </div>
-        <div class="col">
-          <button class="bttn" ion-button small color="positive" (click)="pairTilePopUp(tile)">PAIR ANOTHER</button>
+        <div style="float: right; top: 0;">
+          <b>Physical tiles</b><br>
+          <span style="size: 14;">{{tile.tile._id}}</span>
+        </div>
+        <button class="bttn" ion-button small color="positive" (click)="unpairTile(tile)">Unpair</button>
         </div>
       </div>
     </ion-item>
