Removed unused buttons

--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -10,10 +10,8 @@
     <ion-title>Developer Terminal</ion-title>
   </ion-navbar>
     <div>
-        <button style="max-height: 29px;" ion-button (click)="jumpBottomOfList()">Scroll</button>
+        <button style="max-height: 29px;" ion-button (click)="jumpBottomOfList()">Scroll Bottom</button>
         <button style="max-height: 29px;" ion-button (click)="clearTerminal()">Clear</button>
-        <button style="max-height: 29px;" ion-button (click)="getListLocation()">Location</button>
-        <button style="max-height: 29px;" ion-button (click)="addNewMessage('test_msg')">New msg</button>
     </div>
 
 </ion-header>
