--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -8,9 +8,10 @@
   <ion-navbar>
     <ion-title>Developer Terminal</ion-title>
   </ion-navbar>
-    <div>
-        <button style="max-height: 29px;" ion-button (click)="jumpBottomOfList()">Scroll Bottom</button>
-        <button style="max-height: 29px;" ion-button (click)="clearTerminal()">Clear</button>
+    <div style="background-color: #f8f8f8; border-bottom: thin solid #cccccc;">
+    <!-- This is alot. TODO add to scss -->
+        <button style="margin-left: 10px; width: 40%; max-height: 29px;" ion-button (click)="jumpBottomOfList()">Scroll Bottom</button>
+        <button style="float: right; margin-right: 10px; width: 40%; max-height: 29px;" ion-button (click)="clearTerminal()">Clear</button>
     </div>
 </ion-header>
 
