Now unpair is called without a parameter

--- a/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
+++ b/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
@@ -55,7 +55,7 @@
           <b>Physical tiles</b><br>
           <span style="size: 14;">{{tile.tile._id}}</span>
         </div>
-        <button class="bttn" ion-button small color="positive" (click)="unpairTile(tile)">Unpair</button>
+        <button class="bttn" ion-button small color="positive" (click)="unpairTile()">Unpair</button>
         </div>
       </div>
     </ion-item>
