--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -10,7 +10,7 @@
   </ion-navbar>
     <div style="background-color: #f8f8f8; border-bottom: thin solid #cccccc;">
     <!-- This is alot. TODO add to scss -->
-        <button style="margin-left: 10px; width: 40%; max-height: 29px;" ion-button (click)="jumpBottomOfList()">Scroll Bottom</button>
+        <button style="margin-left: 10px; width: 40%; max-height: 29px;" ion-button (click)="scrollBottomOfList()">Scroll Bottom</button>
         <button style="float: right; margin-right: 10px; width: 40%; max-height: 29px;" ion-button (click)="clearTerminal()">Clear</button>
     </div>
 </ion-header>
