--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -17,7 +17,7 @@
 
 <ion-content>
     <ion-list>
-      <ion-item class="devices" *ngFor="let message of messages;" no-margin>
+      <ion-item class="devices" *ngFor="let message of messages;" no-margin text-wrap>
         <div>
           <span style="font-size: 12px">{{message.datetime}}</span><br>
           <span>{{message.text}}</span>
