try again with default login

--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -14,11 +14,11 @@
     </ion-item>
     <ion-item>
       <ion-label>Host</ion-label>
-      <ion-input type="text" [(ngModel)]="loginInfo.host" name="host" placeholder='178.62.99.218' value='178.62.99.218'></ion-input>
+      <ion-input type="text" [(ngModel)]="loginInfo.host" name="host" placeholder='178.62.99.218'></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Port</ion-label>
-      <ion-input type="number" [(ngModel)]="loginInfo.port" name="port" placeholder='8080' value='8080'></ion-input>
+      <ion-input type="number" [(ngModel)]="loginInfo.port" name="port" placeholder='8080'></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Remember me</ion-label>
