subscribe to mqtt errors in dev terminal, move some code from constructor to ionic lifecycle event, and use "willEnter" instead of "didEnter"

--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -27,5 +27,5 @@
       </div>
     </ion-item>
   </ion-list>
-  <ion-item *ngIf="applications === undefined" style="text-align: center;">Pull down to refresh list</ion-item>
+  <ion-item *ngIf="applications === undefined || applications.length === 0" style="text-align: center;">Pull down to refresh list</ion-item>
 </ion-content>
