--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -1,8 +1,8 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Applications</ion-title>
-     <button right class="titleBttn" ion-button small color="positive" (click)="logout()">logout</button>
+    <button right class="titleBttn" ion-button small color="positive" (click)="logout()">logout</button>
+    <ion-title style="padding-top: 0.5em;">Applications</ion-title>
   </ion-navbar>
 
 </ion-header>
