change message in dev terminal after new object had different name for it

--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -20,7 +20,7 @@
       <ion-item class="devices" *ngFor="let message of messages;" no-margin text-wrap>
         <div>
           <span style="font-size: 12px">{{message.datetime}}</span><br>
-          <span>{{message.text}}</span>
+          <span>{{message.message}}</span>
         </div>
       </ion-item>
     </ion-list>
