--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <button right class="titleBttn" ion-button small color="positive" (click)="logout()">logout</button>
+    <button right class="titleBttn" ion-button small color="positive" (click)="logout()">LOGOUT</button>
     <ion-title style="padding-top: 0.5em;">Applications</ion-title>
   </ion-navbar>
 
@@ -22,7 +22,7 @@
       <div class="row row-center">
         <div id="devName" class="col col-75">
           <b>{{app._id}}</b>
-          <button right class="bttn" ion-button small color="positive" (click)="viewApplication(app)">View app</button>
+          <button right class="bttn" ion-button small color="positive" (click)="viewApplication(app)">VIEW APP</button>
         </div>
       </div>
     </ion-item>
